@@ -9,7 +9,6 @@ import java.io.IOException;
 import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.control.DefaultUserInterfaceControl;
 import de.uka.ilkd.key.control.KeYEnvironment;
@@ -315,7 +314,7 @@ public class TestFile implements Serializable {
                     .stream()
                     .map(s -> s.node().serialNr())
                     .limit(10)
-                    .collect(Collectors.toList());
+                    .toList();
             assertTrue(reloadedProof.closed(),
                 "Reloaded proof did not close: " + proofFile + ", open goals were " + goalsSerials
                     + ", replay status: " + result.getStatus());
